Kubernetes_resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: nimblewaywebapp
  name: nimblewaywebapp
